--- a/ScoutRoute.Payments.Contracts/ScoutRoute.Payments.Contracts.csproj
+++ b/ScoutRoute.Payments.Contracts/ScoutRoute.Payments.Contracts.csproj
@@ -7,9 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.3" />
-    <PackageReference Include="MongoDB.Bson" Version="2.30.0" />
+    <ProjectReference Include="..\ScoutRoute.Shared\ScoutRoute.Shared.csproj" />
   </ItemGroup>
 
 </Project>
