--- a/ScoutRoute.Repository/ScoutRoute.Payments.csproj
+++ b/ScoutRoute.Repository/ScoutRoute.Payments.csproj
@@ -10,12 +10,14 @@
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 		<PackageReference Include="Aspire.Hosting.Redis" Version="9.1.0" />
+		<PackageReference Include="Aspire.MongoDB.Driver" Version="9.1.0" />
 		<PackageReference Include="MediatR" Version="12.4.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
 		<PackageReference Include="StronglyTypedId" Version="1.0.0-beta08" />
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\ScoutRoute.Payments.Contracts\ScoutRoute.Payments.Contracts.csproj" />
 	  <ProjectReference Include="..\ScoutRoute.Shared\ScoutRoute.Shared.csproj" />
 	</ItemGroup>
 
